// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch matches snapshot when blurred 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    aria-pressed="false"
    class="toggle-switch"
    role="button"
    tabindex="0"
  >
    <div
      class="toggle-switch__slider"
    >
      <div
        class="toggle-switch__knob"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleSwitch matches snapshot when focused 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    aria-pressed="false"
    class="toggle-switch"
    role="button"
    tabindex="0"
  >
    <div
      class="toggle-switch__slider"
    >
      <div
        class="toggle-switch__knob"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleSwitch renders correctly when defaultChecked 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    aria-pressed="true"
    class="toggle-switch"
    role="button"
    tabindex="0"
  >
    <div
      class="toggle-switch__slider enabled"
    >
      <div
        class="toggle-switch__knob enabled"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleSwitch renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    aria-disabled="true"
    aria-pressed="false"
    class="toggle-switch disabled"
    role="button"
    tabindex="-1"
  >
    <div
      class="toggle-switch__slider"
    >
      <div
        class="toggle-switch__knob disabled"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleSwitch renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    aria-pressed="false"
    class="toggle-switch"
    role="button"
    tabindex="0"
  >
    <div
      class="toggle-switch__slider"
    >
      <div
        class="toggle-switch__knob"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleSwitch toggles from off to on and matches snapshot 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    aria-pressed="true"
    class="toggle-switch"
    role="button"
    tabindex="0"
  >
    <div
      class="toggle-switch__slider enabled"
    >
      <div
        class="toggle-switch__knob enabled"
      />
    </div>
  </div>
</DocumentFragment>
`;
